[package]
name = "vulpine-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
web-sys = { version = "0.3", features = ["DomRect", "Element"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
shared = { path = "./shared" }

[workspace]
members = ["shared", "src-tauri"]
resolver = "2"
